openapi implementation changes